; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9m111.c_mt9m111_set_test_pattern.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_mt9m111.c_mt9m111_set_test_pattern.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt9m111 = type { i32 }
%struct.i2c_client = type { i32 }

@MT9M111_TPG_CTRL = common dso_local global i32 0, align 4
@MT9M111_TPG_SEL_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mt9m111*, i32)* @mt9m111_set_test_pattern to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt9m111_set_test_pattern(%struct.mt9m111* %0, i32 %1) #0 {
  %3 = alloca %struct.mt9m111*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.i2c_client*, align 8
  store %struct.mt9m111* %0, %struct.mt9m111** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mt9m111*, %struct.mt9m111** %3, align 8
  %7 = getelementptr inbounds %struct.mt9m111, %struct.mt9m111* %6, i32 0, i32 0
  %8 = call %struct.i2c_client* @v4l2_get_subdevdata(i32* %7)
  store %struct.i2c_client* %8, %struct.i2c_client** %5, align 8
  %9 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %10 = load i32, i32* @MT9M111_TPG_CTRL, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MT9M111_TPG_SEL_MASK, align 4
  %13 = call i32 @mt9m111_reg_mask(%struct.i2c_client* %9, i32 %10, i32 %11, i32 %12)
  ret i32 %13
}

declare dso_local %struct.i2c_client* @v4l2_get_subdevdata(i32*) #1

declare dso_local i32 @mt9m111_reg_mask(%struct.i2c_client*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
